<resources xmlns:xliff="urn:oasis:names:tc:xliff:document:1.2">
    <string name="app_name">Easyweigh Harvesting</string>
    <string name="action_settings">Settings</string>
    <string name="app_version">Easyweigh Harvesting 1.0.0</string>
    <string name="defaultURL">http://192.168.0.24/Easywayonline/Easyweigh.svc/EasyweighService</string>
    <string name="defaultKey">LE7FH8N4T2</string>
    <string name="nav_item_home">Home</string>
    <string name="nav_item_import">Import Master</string>
    <string name="nav_item_batches">Batch List</string>
    <string name="nav_item_paired">Pair Devices</string>
    <string name="nav_item_settings">General Settings</string>
    <string name="nav_mode_settings">Mode Settings</string>
    <string name="nav_sub_menu">More</string>
    <string name="nav_sub_menu_item01">Reset Base Date</string>
    <string name="nav_sub_menu_changepass">Change Password</string>
    <string name="drawer_header_text">Username</string>
    <string name="open_batch">Open Batch</string>
    <string name="close_batch">Close Batch</string>
    <string name="batch_on">Running Batch</string>
    <string name="opened_on">Date</string>
    <string name="Username">Username</string>
    <string name="Password">Password</string>
    <string name="title_sign_in">Sign In</string>
    <string name="title_sign_out">Sign Out</string>
    <string name="LoginError">Please type correct username/password</string>
    <string name="add_user">Add User</string>
    <string name="btn_next">Next</string>
    <string name="btn_print">Print</string>
    <string name="please_wait">Please Wait ...</string>
    <string name="logging_out">Logging Out ...</string>
    <string name="spinner_prompt_estate">Select Estate</string>
    <string name="spinner_prompt_division">Select Division</string>
    <string name="spinner_prompt_field">Select Field</string>
    <string name="spinner_prompt_task">Select Task</string>
    <string name="spinner_prompt_block">Select Block</string>
    <string name="spinner_prompt_type">Select Type</string>
    <string name="spinner_prompt_produce">Select Produce</string>
    <string name="spinner_prompt_grade">Select Grade</string>
    <string name="spinner_prompt_variety">Select Variety</string>
    <string name="spinner_prompt_transporter">Select Transporter</string>
    <string name="spinner_prompt_factory">Select Factory</string>
    <string name="ScaleError">Please select Scale Model to Weigh</string>
    <string name="btnSave">Save</string>
    <string name="title_users">Users</string>
    <string name="title_company">Company Setup</string>
    <string name="title_factory">Factories</string>
    <string name="title_produce">Produce</string>
    <string name="title_grade">Grades</string>
    <string name="title_variety">Varieties</string>
    <string name="title_tpt">Transporters</string>
    <string name="title_upload">Upload</string>
    <string name="title_activity_serial">Transcell (VSP)</string>
    <string name="title_activity_fpreader">FP Reader Test</string>
    <string name="company_details">Company Details</string>
    <string name="company_prefix">Prefix</string>
    <string name="company_name">Name</string>
    <string name="company_letterbox">LetterBox</string>
    <string name="company_postalcode">Postal Code</string>
    <string name="company_postalname">Post Name</string>
    <string name="company_postregion">Region</string>
    <string name="company_posttel">Telephone</string>
    <string name="crateRange">Crate Weight Settings</string>
    <string name="maxCRange">Maximum Crate Weight</string>
    <string name="maxCDesc">Enter Maximum Crate Weight</string>
    <string name="minCRange">Minimum Crate Weight</string>
    <string name="minCDesc">Enter Minimum Crate Weight</string>
    <string name="ad_unit_id">pub-6485677546432107/1100661008</string>
    <string-array name="type">
        <item>Full Day</item>
        <item>Half Day</item>
        <item>Overtime</item>
        <item>Daily Piecework</item>
        <item>Hourly Labour</item>
        <item>Holiday Duty</item>
    </string-array>
    <string-array name="usertype">
        <item>Manager</item>
        <item>Clerk</item>
    </string-array>
    <string name="text_connect">Connect</string>
    <string name="text_enable_bluetooth">Enable Bluetooth</string>
    <string name="text_scan_devices">Scan Devices</string>
    <string name="text_print_demo">Print Demo</string>
    <string name="text_print_barcode">Print Barcode</string>
    <string name="text_print_image">Print Image</string>
    <string name="text_print_receipt">Print Receipt</string>
    <string name="text_print_text">Print Text</string>
    <string name="General_settings">General</string>
    <string name="title_settings">Settings</string>
    <string name="cancel">CANCEL</string>
    <string name="forgot">Forgot Password</string>
    <string name="insertEmail">Insert your email</string>
    <string name="rest">Reset Password</string>
    <string name="netWeight">Net Weight</string>
    <string name="tareWeight">Tare Weight</string>
    <string name="tvGross">Gross Weight</string>
    <string name="username">User ID:</string>
    <string name="bAccept">Accept</string>
    <string name="tvPin">User Pin</string>
    <string name="tvUserLevel">User Level</string>
    <string name="bt_not_enabled_leaving">Bluetooth was not enabled.</string>
    <string name="alert_dialog_ok">OK</string>
    <string name="scanning">Scanning for devices …</string>
    <string name="select_device">select a device to connect</string>
    <string name="none_paired">No devices have been paired</string>
    <string name="none_found">No devices found</string>
    <string name="title_paired_devices">Paired Devices</string>
    <string name="title_other_devices">Other Available Devices</string>
    <string name="button_scan">Scan for devices</string>
    <string name="tvProduceCode">Produce Code:</string>
    <string name="tvProduceTitle">Produce Title:</string>
    <string name="MyDevice">Serial Adapter</string>
    <string name="terminalID">Kit ID</string>
    <string name="prefTerminalSummary">"Enter a unique KIT ID here."</string>
    <string name="cropMode">Harvested Crop</string>
    <string name="cropModeSummary">"Select Harvested Crop to Be Weighed here."</string>
    <string name="enableAutomaticDel">Auto generate Delivery No</string>
    <string name="batchCrates">Maximum Number of Crates per Batch</string>
    <string name="prefBatchCrates">"Enter Maximum Number of Crates per Batch here."</string>
    <string name="prefAutomaticDel">"This will enable an auto generated Delivery Number."</string>
    <string name="FpMatch">Fingerprint Match Score</string>
    <string name="prefFpMatch">"Enter preferred match score per Fingerprint here."</string>
    <string name="FpScan">Fingerprint Autoscan</string>
    <string name="prefFpScan">"Allow Fingerprint AutoScan here."</string>
    <string name="enforceCheckout">Enforce CheckOut</string>
    <string name="prefCheckout">This will restrict a compulsary CheckOut of Employees.</string>
    <string name="enforceBlock">Enforce Block</string>
    <string name="prefBlock">This will restrict a compulsary Block selection.</string>
    <string name="enforceGrade">Enforce Grade</string>
    <string name="prefGrade">This will restrict a compulsary Grade selection.</string>
    <string name="enforcePickerNo">Filter By PickerNo</string>
    <string name="prefPickerNo">This will enhance Picker No Filtering</string>
    <string name="prefTareSummary">"Enter tare weight here.It has to be greater than 0 and less than 9.9"</string>
    <string name="enableAdmin">Enable Admin Weighing</string>
    <string name="enableAdminSummary">This will enable the admin to perform Sample Weighing</string>
    <string name="defaultValue">0</string>
    <string name="Add">Add</string>
    <string name="enableAlphaNumeric">"Enable Alphanumeric Characters"</string>
    <string name="prefCategory">General Settings</string>
    <string name="cloudSettings">Cloud Settings</string>
    <string name="modeSettings">URL Mode Settings</string>
    <string name="realtimeServices">Enable Realtime Services</string>
    <string name="realtimeServicesSummary">This will enable realtime data transmission to the Easyway cloud platform</string>
    <string name="prefAlphaNumericSummary">This will enable AlphaNumeric Characters in search box.</string>
    <string name="cloudServices">Enable Cloud Services</string>
    <string name="cloudServicesSummary">This will enable access to the Easyway cloud platform</string>
    <string name="licenseKey">License Key</string>
    <string name="licenseKeySummary">Enter your unique license key for use of Easyway cloud platform</string>
    <string name="portalURL">WI-FI URL Portal</string>
    <string name="portalURLSummary">Enter the WI-FI URL to access the Easyway cloud services</string>
    <string name="coPort">Port</string>
    <string name="coPortSummary">Enter the Port to access the Easyway cloud services</string>
    <string name="mdportalURL">Mobile-Data URL Portal</string>
    <string name="mdportalURLSummary">Enter the Mobile-Data URL to access the Easyway cloud services</string>
    <string name="scaleModel">Scale Model</string>
    <string name="weighingAlgorithm">Weighing Algorithm</string>
    <string name="scaleVersionSummary">Select the Easyweigh Scale Version to be used with this phone</string>
    <string name="weighingAlgorithmSummary">Select the Weighing Algorithm to be used when recording weight</string>
    <string name="internetAccessModeSummary">Select your preferred mode of data access</string>
    <string name="internetAccessMode">Preferred Data Access Mode</string>
    <string name="fullname">Full Name</string>
    <string name="pair_printer">Pair Printer</string>
    <string name="pair_scale">Pair Scale</string>
    <string name="back">Back</string>
    <string name="next">Next</string>
    <string name="console">Console</string>
    <string name="btn_send">Send</string>
    <string name="label_rx">Rx:</string>
    <string name="label_tx">Tx:</string>
    <string name="btn_scan">Scan Scale</string>
    <string name="btn_connecting">Connecting..</string>
    <string name="btn_disconnect">Disconnect</string>
    <string name="non_applicable">N/A</string>
    <string name="label_device_name">Name: </string>
    <string name="label_device_address">Address: </string>
    <string name="label_device_rssi">RSSI: </string>
    <string name="device_admin_enabled">Administrator Features Enabled</string>
    <string name="device_admin_disabled">Administrator Features Disabled</string>
    <string name="connect">Connect a device</string>
    <string name="Verify">Verify</string>
    <string name="import_fingerprints">FingerPrints</string>
    <string name="pair_reader">Pair C/F Reader</string>
    <string name="cf_reader">Verify Employee Finger</string>
    <string name="c_reader">Tap Card</string>
    <string name="cf_reader_desc">Please make sure that the C/F Card Reader is connected. Click Connect to C/F Reader.</string>
    <string name="vModes">Verification Modes</string>
    <string name="verificationModesSummary">Select the Verification Mode to be used with this phone</string>
    <string name="tType">Default Task Types</string>
    <string name="tasktypeSummary">Select the Main Selection Task to be used with this phone</string>
    <string name="fingerprint_search">FingerPrint Search</string>
    <string name="manual_farmer_search">Manual Farmer Search</string>
    <string name="read_card_search">Read Card Search</string>
    <string name="printer_connected">Printer Connected</string>
    <string name="reconnect_printer">Reconnect Printer</string>
    <string name="scale_not_connected">Scale Not Connected</string>
    <string name="loading">Loading</string>
    <string name="preparing_device">Device is preparing, please wait…</string>
</resources>