<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/navigation_item_home"
            android:checked="true"
            android:icon="@drawable/ic_home"
            android:title="@string/nav_item_home" />
        <item
            android:id="@+id/ChangePass"
            android:icon="@drawable/ic_changepass"
            android:title="@string/nav_sub_menu_changepass" />
        <item
            android:id="@+id/navigation_item_import"
            android:icon="@drawable/ic_import"
            android:title="@string/nav_item_import" />

        <item
            android:id="@+id/navigation_item_paired"
            android:icon="@drawable/ic_paired"
            android:title="@string/nav_item_paired" />
        <item
            android:id="@+id/navigation_mode_settings"
            android:icon="@drawable/ic_cloud_upload_black_24dp"
            android:title="@string/nav_mode_settings" />

        <item
            android:id="@+id/navigation_item_settings"
            android:icon="@drawable/ic_settings_grey600_24dp"
            android:title="@string/nav_item_settings" />
        <item
            android:id="@+id/nav_basedate"
            android:icon="@drawable/ic_dateset"
            android:title="@string/nav_sub_menu_item01" />
    </group>

    <item android:title="@string/nav_sub_menu">
        <menu>

        <item
                android:id="@+id/SignOutItem"
                android:icon="@drawable/ic_sign_out"
                android:title="@string/title_sign_out" />

        </menu>
    </item>

</menu>