<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#eeeeee"
    android:orientation="vertical">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#d9d7d7"
        android:padding="@dimen/activity_vertical_margin">

        <Button
            android:id="@+id/btn_enable"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:background="@drawable/bg_buttons"
            android:text="@string/text_enable_bluetooth"
            android:textColor="@drawable/button_text_color"
            android:visibility="gone" />

        <Button
            android:id="@+id/btn_connect"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_alignParentRight="true"
            android:text="@string/text_connect" />

        <Spinner
            android:id="@+id/sp_device"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBottom="@+id/btn_connect"
            android:layout_alignParentLeft="true"
            android:layout_alignParentTop="true"
            android:layout_toLeftOf="@+id/btn_connect" />

    </RelativeLayout>

    <View
        android:id="@+id/separator"
        android:layout_width="match_parent"
        android:layout_height="5dp"
        android:background="@color/colorPrimary" />

    <Button
        android:id="@+id/btn_print_demo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/activity_vertical_margin"
        android:layout_marginTop="@dimen/activity_vertical_margin"
        android:layout_marginRight="@dimen/activity_vertical_margin"
        android:enabled="false"
        android:text="@string/text_print_demo" />

    <Button
        android:id="@+id/btn_print_barcode"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/activity_vertical_margin"
        android:layout_marginTop="10dp"
        android:layout_marginRight="@dimen/activity_vertical_margin"
        android:enabled="false"
        android:text="@string/text_print_barcode" />

    <Button
        android:id="@+id/btn_print_image"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/activity_vertical_margin"
        android:layout_marginTop="10dp"
        android:layout_marginRight="@dimen/activity_vertical_margin"
        android:enabled="false"
        android:text="@string/text_print_image" />

    <Button
        android:id="@+id/btn_print_receipt"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/activity_vertical_margin"
        android:layout_marginTop="10dp"
        android:layout_marginRight="@dimen/activity_vertical_margin"
        android:enabled="false"
        android:text="@string/text_print_receipt" />

    <Button
        android:id="@+id/btn_print_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/activity_vertical_margin"
        android:layout_marginTop="10dp"
        android:layout_marginRight="@dimen/activity_vertical_margin"
        android:enabled="false"
        android:text="@string/text_print_text" />

</LinearLayout>