<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical"
    android:padding="20dp">

    <Button
        android:id="@+id/btn_pairscale"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="15dp"
        android:background="@drawable/bg_buttons"
        android:text="@string/pair_scale" />

    <Button
        android:id="@+id/btn_pairprinter"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="15dp"
        android:background="@drawable/bg_buttons"
        android:text="@string/pair_printer" />

    <Button
        android:id="@+id/btn_pairreader"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/bg_buttons"
        android:text="@string/pair_reader"
        android:visibility="gone" />

</LinearLayout>