<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:layout_gravity="center"
    android:layout_marginTop="0.0dip"
    android:gravity="top|center"
    android:orientation="vertical">

    <ScrollView
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:layout_marginLeft="20.0dip"
        android:layout_marginTop="10.0dip"
        android:layout_marginRight="20.0dip">

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="0.0dip"
            android:gravity="top|center"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="left"
                android:text="@string/fullname"
                android:textAppearance="?android:textAppearanceMedium" />

            <EditText
                android:id="@+id/etFullName"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5.0dip"
                android:ems="10"
                android:inputType="textCapCharacters">

                <requestFocus />
            </EditText>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="left"
                android:layout_marginTop="5.0dip"
                android:text="@string/username"
                android:textAppearance="?android:textAppearanceMedium" />

            <EditText
                android:id="@+id/etNewUserId"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5.0dip"
                android:ems="10"
                android:inputType="textCapCharacters" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="left"
                android:layout_marginTop="5.0dip"
                android:text="@string/tvPin"
                android:textAppearance="?android:textAppearanceMedium" />

            <EditText
                android:id="@+id/etPassword"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5.0dip"
                android:ems="10"
                android:inputType="number" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="left"
                android:layout_marginTop="5.0dip"
                android:text="@string/tvUserLevel"
                android:textAppearance="?android:textAppearanceMedium" />

            <Spinner
                android:id="@+id/spUserLevel"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5.0dip"
                android:entries="@array/usertype" />

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:paddingTop="10dp">

                <Button
                    android:id="@+id/btn_svUser"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="5dp"
                    android:background="@drawable/bg_buttons"
                    android:text="@string/btnSave"
                    android:textColor="@drawable/button_text_color"
                    android:textSize="15sp"
                    android:visibility="visible" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:padding="5dp">

                <Button
                    android:id="@+id/btnDelete"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:background="@drawable/bg_buttons"
                    android:text="Delete"
                    android:textColor="@drawable/button_text_color"
                    android:visibility="gone" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="      " />

                <Button
                    android:id="@+id/btnUpdate"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@drawable/bg_buttons"
                    android:text="Update"
                    android:textColor="@drawable/button_text_color"
                    android:visibility="gone" />

            </LinearLayout>
        </LinearLayout>
    </ScrollView>

</LinearLayout>